--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
         <!--container start-->
         <main>
-            <div class="row petals" id="home">
-                    <div class="col-12 col-sm-8 p-0 main-banner">
+            <div class="petals" id="home">
+                    <div class="main-banner">
                         <img src="petals/assets/banner1.jpg" alt="banner1">
                     </div>
-                    <div class="col-12 col-sm-4 side-container">
+                    <div class="side-container">
                         <img src="petals/assets//side-banner1.jpg" alt="side-banner-1">
                         <img src="petals/assets//side-banner2.jpg" alt="side-banner-2">
                     </div>
