--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!--header start -->
         <header class="petals-header">
             <nav class="navbar fixed-top navbar-expand-sm bg-white">
+                <div class="container">
                     <a class="navbar-brand" href="#home">
                         <img src="petals/assets/logo.png" alt="petals-logo" />
                     </a>
@@ -46,6 +47,7 @@
                                 <a class="nav-link" href="#contact">Contact</a>
                             </li>
                         </ul>
+                    </div>
                 </div>
             </nav>
         </header>
