--- a/index.html
+++ b/index.html
@@ -21,34 +21,39 @@
     </head>
     <body>
         <!--header start -->
-        <header class="petals-header">
-            <nav class="navbar fixed-top navbar-expand-sm bg-white">
-                <div class="container">
-                    <a class="navbar-brand" href="#home">
-                        <img src="petals/assets/logo.png" alt="petals-logo" />
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#petals-navbar">
-                        <span>
-                            <img src="petals/assets/mob-menu.png" alt="mobile-menu" />
-                        </span>
-                    </button>
-                    <div class="collapse navbar-collapse text-center" id="petals-navbar">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#home">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#categories">Categories</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <header class="fixed-top petals-header bg-white">
+            <nav class="navbar container navbar-items navbar-expand-sm ">
+            <div class="d-flex flex-grow-1 navbar-content  align-items-center">
+                <a class="navbar-brand mx-0" href="#">
+                <img src="petals/assets/logo.png" alt="PETALS" />
+                </a>
+                <div class="w-100 text-right">
+                <button
+                    class="navbar-toggler border-0"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#petalsNavbar"
+                >
+                    <span></span><img src="petals/assets/mob-menu.png" alt="mobile-icon" />
+                </button>
                 </div>
+            </div>
+            <div class="collapse navbar-collapse flex-grow-1 text-center mobile-nav" id="petalsNavbar">
+                <ul class="navbar-nav ml-auto flex-nowrap">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#categories" class="nav-link">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
+                </ul>
+            </div>
             </nav>
         </header>
         <!-- header end -->
@@ -57,11 +62,11 @@
         <main>
             <div class="petals" id="home">
                     <div class="main-banner">
-                        <img src="petals/assets/banner1.jpg" alt="banner1">
+                        <img src="petals/assets/banner1.jpg" alt="main banner image white hibiscus">
                     </div>
                     <div class="side-container">
-                        <img src="petals/assets//side-banner1.jpg" alt="side-banner-1">
-                        <img src="petals/assets//side-banner2.jpg" alt="side-banner-2">
+                        <img src="petals/assets//side-banner1.jpg" alt="side-banner first image flower bouquet">
+                        <img src="petals/assets//side-banner2.jpg" alt="side-banner last image yellow flowers ">
                     </div>
             </div>
             <div class="feature" id="about">
@@ -70,34 +75,34 @@
             <div class="container flowers-section" id="categories">
                 <div class="flowers-row">
                     <div class="flower-card">
-                        <img src="petals/assets/flower-1.jpg" alt="flower-1">
+                        <img src="petals/assets/flower-1.jpg" alt="category 1 pink rose bouquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-2.jpg" alt="flower-2">
+                        <img src="petals/assets/flower-2.jpg" alt="category 2 mixed roses buoquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-3.jpg" alt="flower-3">
+                        <img src="petals/assets/flower-3.jpg" alt="category 3 red roses buoquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                 </div>
                 <div class="flowers-row">
                     <div class="flower-card">
-                        <img src="petals/assets/flower-4.jpg" alt="flower-4">
+                        <img src="petals/assets/flower-4.jpg" alt="category 4 white & red roses buoquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-5.jpg" alt="flower-5">
+                        <img src="petals/assets/flower-5.jpg" alt="category 5 pink roses buoquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-6.jpg" alt="flower-6">
+                        <img src="petals/assets/flower-6.jpg" alt="category 6 white and pink roses buoquet image">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
@@ -112,16 +117,16 @@
                 <h3>Connect Us</h3>
                 <div class="social-media">
                     <a href="#">
-                        <img src="petals/assets//fb.png" alt="fb">
+                        <img src="petals/assets//fb.png" alt="facebook icon image">
                     </a>
                     <a href="#">
-                        <img src="petals/assets//twitter.png" alt="twitter">
+                        <img src="petals/assets//twitter.png" alt="twitter icon image">
                     </a>
                     <a href="#">
-                        <img src="petals/assets//google-plus.png" alt="google plus">
+                        <img src="petals/assets//google-plus.png" alt="google plus icon image">
                     </a>
                     <a href="#">
-                        <img src="petals/assets//skype.png" alt="skype">
+                        <img src="petals/assets//skype.png" alt="skype icon image">
                     </a>
                 </div>
                 <span class="span-content">Copyright <span class="petal-color">Petals</span> 2019</span>
