image alignment changed

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         <img src="petals/assets/banner1.jpg" alt="main banner image white hibiscus">
                     </div>
                     <div class="side-container">
-                        <img src="petals/assets//side-banner1.jpg" alt="side-banner first image flower bouquet">
-                        <img src="petals/assets//side-banner2.jpg" alt="side-banner last image yellow flowers ">
+                        <img src="petals/assets//side-banner2.jpg" alt="side-banner first image yellow flowers ">
+                        <img src="petals/assets//side-banner1.jpg" alt="side-banner last image flower bouquet">
                     </div>
             </div>
             <div class="feature" id="about">
