container fluid added

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
         <!-- header end -->
 
         <!--container start-->
-        <main>
+        <main class="container-fluid">
             <div class="petals" id="home">
                     <div class="main-banner">
-                        <img src="petals/assets/banner1.jpg" alt="main banner image white hibiscus">
+                        <img src="petals/assets/banner1.jpg" alt="main banner image of white hibiscus">
                     </div>
                     <div class="side-container">
-                        <img src="petals/assets//side-banner2.jpg" alt="side-banner first image yellow flowers ">
-                        <img src="petals/assets//side-banner1.jpg" alt="side-banner last image flower bouquet">
+                        <img src="petals/assets//side-banner2.jpg" alt="side-banner first image of yellow flowers ">
+                        <img src="petals/assets//side-banner1.jpg" alt="side-banner last image of flower bouquet">
                     </div>
             </div>
             <div class="feature" id="about">
@@ -75,34 +75,34 @@
             <div class="container flowers-section" id="categories">
                 <div class="flowers-row">
                     <div class="flower-card">
-                        <img src="petals/assets/flower-1.jpg" alt="category 1 pink rose bouquet image">
+                        <img src="petals/assets/flower-1.jpg" alt="image of pink roses bouquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-2.jpg" alt="category 2 mixed roses buoquet image">
+                        <img src="petals/assets/flower-2.jpg" alt="image of mixed roses buoquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-3.jpg" alt="category 3 red roses buoquet image">
+                        <img src="petals/assets/flower-3.jpg" alt="image of red roses buoquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                 </div>
                 <div class="flowers-row">
                     <div class="flower-card">
-                        <img src="petals/assets/flower-4.jpg" alt="category 4 white & red roses buoquet image">
+                        <img src="petals/assets/flower-4.jpg" alt="image of white & red roses buoquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-5.jpg" alt="category 5 pink roses buoquet image">
+                        <img src="petals/assets/flower-5.jpg" alt="image of pink roses buoquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
                     <div class="flower-card">
-                        <img src="petals/assets/flower-6.jpg" alt="category 6 white and pink roses buoquet image">
+                        <img src="petals/assets/flower-6.jpg" alt="image of white and pink roses buoquet">
                         <h3>Lorem ipsum</h3>
                         <p>Lorem ipsum,lorem ipsum</p>
                     </div>
