padding and spacing changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     data-toggle="collapse"
                     data-target="#petalsNavbar"
                 >
-                    <span></span><img src="petals/assets/mob-menu.png" alt="mobile-icon" />
+                    <span><img src="petals/assets/mob-menu.png" alt="mobile-icon" /></span>
                 </button>
                 </div>
             </div>
